k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-categorizer
  labels:
    app: image-categorizer
spec:
  type: NodePort
  selector:
    app: image-categorizer
  ports:
    - port: 3001            # Porta interna do serviço (ClusterIP)
      targetPort: 3001       # Porta no contêiner (conforme containerPort do Deployment)
      nodePort: 30001        # Porta no nó/Minikube para acesso externo
