k8s/summarizer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: summarizer-service
spec:
  type: NodePort
  selector:
    app: summarizer
  ports:
    - port: 3002        # Porta do serviço dentro do cluster
      targetPort: 3002  # Porta que o container realmente está ouvindo!
      nodePort: 30002   # Porta externa para acessar via NodePort
